--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
 body {
-    background: red;
+    background: linear-gradient(to right, #859beb, #d7dcfa);
+    font-family: "Playpen Sans", system-ui;
+}
+
+.panel {
+    background-color: rgba(255, 255, 255, 0.342);
+    border: 2px solid rgba(255, 255, 255, 0.413);
+    border-radius: 30px;
+    box-shadow: 0px 30px 50px #6383e3a5;
+    margin: 60px auto;
+    max-width: 800px;
+    padding: 30px;
 }
