--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,13 @@ header {
     box-shadow: 2px 2px 4px #4d68f186;
     font-size: 16px;
     padding: 15px 20px;
+    transition: all 200ms ease-in-out;
     width: 75%;
+}
+
+.search-bar:hover {
+    cursor: pointer;
+    transform: scale(1.02);
 }
 
 .search-button {
@@ -46,6 +52,7 @@ header {
 }
 
 .search-button:hover {
+    cursor: pointer;
     transform: scale(1.06);
 }
 
@@ -126,7 +133,12 @@ main {
     margin: 0 auto;
     padding: 18px 25px;
     text-align: center;
+    transition: all 300ms ease-in-out;
     width: 250px;
+}
+
+.weather-specs:hover {
+    transform: scale(1.06);
 }
 
 .specs-humidity {
