--- a/src/style.css
+++ b/src/style.css
@@ -99,8 +99,8 @@ main {
 }
 
 .heading-icon {
-    font-size: 44px;
-    margin-top: 18px;
+    height: 88px;
+    width: 88px;
 }
 
 .heading-temperature {
@@ -109,6 +109,7 @@ main {
     background-clip: text;
     font-size: 88px;
     font-weight: 500;
+    line-height: 88px;
     margin-left: 10px;
     margin-top: 0px;
 }
@@ -116,7 +117,7 @@ main {
 .heading-unit {
     color: #6C83F9;
     font-size: 28px;
-    margin-top: 16px;
+    margin-top: 0px;
     margin-right: 30px;
 }
 
