--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,21 @@ body {
     max-width: 600px;
     padding: 30px;
 }
+
+.search-form-input {
+    background-color: #E4F0FF;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 15px 20px;
+    width: 80%;
+}
+
+.search-form-button {
+    background-color: #322F64;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    margin-left: 5px;
+    padding: 15px 30px;
+}
