--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+a {
+    color: #322F64;
+}
+
 .weather-app {
     background-color: #FFFFFF;
     border-radius: 20px;
@@ -10,6 +14,11 @@ body {
     margin: 45px auto;
     max-width: 600px;
     padding: 30px;
+}
+
+header {
+    border-bottom: 1px solid #D9EBFF;
+    padding: 0 0 30px 0;
 }
 
 .search-form-input {
@@ -26,6 +35,69 @@ body {
     border: none;
     border-radius: 10px;
     color: white;
+    font-size: 16px;
     margin-left: 5px;
     padding: 15px 30px;
+    transition: all 250ms ease-in-out;
+}
+
+.search-form-button:hover {
+    transform: scale(1.04);
+}
+
+main {
+    padding: 30px 0;
+}
+
+.weather-app-data {
+    display: flex;
+    justify-content: space-between;
+}
+
+.weather-app-city {
+    color: #322F64;
+    font-size: 38px;
+    line-height: 48px;
+    margin: 0;
+}
+
+.weather-app-details {
+    color: #322f64c9;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.weather-app-details strong {
+    color: #7773FE;
+}
+
+.weather-app-temperature-container {
+    display: flex;
+}
+
+.weather-app-icon {
+    font-size: 44px;
+    margin-top: 22px;
+}
+
+.weather-app-temperature {
+    color: #322F64;
+    font-size: 88px;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.weather-app-unit {
+    color: #322F64;
+    font-size: 28px;
+    margin-top: 16px;
+}
+
+footer {
+    border-top: 1px solid #D9EBFF;
+    color: rgb(0, 0, 0, 0.6);
+    font-size: 14px;
+    padding: 30px 0 0 0;
+    text-align: center;
 }
