--- a/src/style.css
+++ b/src/style.css
@@ -77,21 +77,21 @@ main {
 }
 
 .weather-app-icon {
-    font-size: 44px;
-    margin-top: 22px;
+    width: 88px;
+    height: 88px;
 }
 
 .weather-app-temperature {
     color: #322F64;
     font-size: 88px;
     font-weight: bold;
-    margin-left: 10px;
+    line-height: 88px;
 }
 
 .weather-app-unit {
     color: #322F64;
     font-size: 28px;
-    margin-top: 16px;
+    margin-top: 6px;
 }
 
 footer {
