--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,43 @@ main {
     margin-top: 6px;
 }
 
+.weather-forecast-day {
+    background-color: #f8f8f7;
+    border-radius: 10px;
+    padding: 20px 10px;
+}
+
+.weather-forecast {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.weather-forecast-date {
+    color: #322f64c9;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.weather-forecast-icon {
+    font-size: 38px;
+    text-align: center;
+}
+
+.weather-forecast-temperatures {
+    color: #7773FE;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.weather-forecast-temperature {
+    padding: 0 10px;
+}
+
 footer {
     border-top: 1px solid #D9EBFF;
     color: rgb(0, 0, 0, 0.6);
